--- a/my-project/package.json
+++ b/my-project/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "chromatic": "npx chromatic --project-token=chpt_3e97dd670005c78"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.12",
